@@ -52,6 +52,27 @@ DESCRIPTION
     The RPC::PlServer and RPC::PlClient are abstract servers and clients:
     You have to derive your own classes from it.
 
+  Additional options
+
+    The RPC::PlServer inherits all of Net::Daemon's options and attributes
+    and adds the following:
+
+    *cipher*
+            The attribute value is an instance of Crypt::DES, Crypt::IDEA or
+            any other class with the same API for block encryption. If you
+            supply such an attribute, the traffic between client and server
+            will be encrypted using this option.
+
+    *maxmessage* (--maxmessage=size)
+            The size of messages exchanged between client and server is
+            restricted, in order to omit denial of service attacks. By
+            default the limit is 65536 bytes.
+
+    users   This is an attribute of the client object used for Permit/Deny rules
+            in the config file. It's value is an array ref of user names
+            that are allowed to connect from the given client. See the
+            example config file below. the section on "CONFIGURATION FILE".
+
   Error Handling
 
     Error handling is simple with the RPC package, because it is based on
@@ -140,7 +161,7 @@ CONFIGURATION FILE
             'user' => 'nobody',
             'group' => 'nobody',
             'localport' => '1003',
-            'mode' => 'fork'
+            'mode' => 'fork',
 
             # Access control
             'clients' => [
@@ -154,12 +175,12 @@ CONFIGURATION FILE
                 # Accept myhost.company.com
                 {
                     'mask' => '^myhost\.company\.com$',
-                    'accept' => 1
+                    'accept' => 1,
                     'users' => [ {
                         'name' => 'bob',
                         'cipher' => $bob_key
                         } ]
-                }
+                },
                 # Deny everything else
                 {
                     'mask' => '.*',
@@ -194,12 +215,12 @@ EXAMPLE
 
         $MD5_Server::VERSION = '1.0'; # Clients will be refused, if they
                                       # request version 1.1
-        @MD5_Server::ISA = qw(Net::Daemon);
+        @MD5_Server::ISA = qw(RPC::PlServer);
 
         eval {
             # Server options below can be overwritten in the config file or
             # on the command line.
-            my $server = RPC::PlServer->new({
+            my $server = MD5_Server->new({
                 'pidfile'    => '/var/run/md5serv.pid',
                 'configfile' => '/etc/md5serv.conf',
                 'facility'   => 'daemon', # Default
@@ -207,11 +228,12 @@ EXAMPLE
                 'group'      => 'nobody',
                 'localport'  => 2000,
                 'logfile'    => 0,        # Use syslog
-                'mode'       => 'fork'    # Recommended for Unix
+                'mode'       => 'fork',   # Recommended for Unix
                 'methods'    => {
                     'MD5_Server' => {
                         'ClientObject' => 1,
-                        'CallMethod' => 1
+                        'CallMethod' => 1,
+                        'NewHandle' => 1
                         },
                     'MD5' => {
                         'new' => 1,
@@ -219,7 +241,7 @@ EXAMPLE
                         'hexdigest' => 1
                         },
                     }
-            };
+            });
             $server->Bind();
         };
 
