@@ -16,22 +16,22 @@
 #           Am Eisteich 9
 #           72555 Metzingen
 #           Germany
-# 
+#
 #           Email: joe@ispsoft.de
 #           Phone: +49 7123 14881
 #
 
 use strict;
 
-require RPC::PlServer::Comm;
-require Net::Daemon::Log;
-require IO::Socket;
+use RPC::PlServer::Comm ();
+use Net::Daemon::Log ();
+use IO::Socket ();
 
 
 package RPC::PlClient;
 
-$RPC::PlClient::VERSION = '0.2003';
-@RPC::PlClient::ISA = qw(RPC::PlServer::Comm Net::Daemon::Log);
+$RPC::PlClient::VERSION = '0.2010';
+@RPC::PlClient::ISA = qw(Net::Daemon::Log);
 
 
 ############################################################################
@@ -77,15 +77,16 @@ sub new ($@) {
 		 $socket->peerhost(), $socket->peerport());
     $self->Debug("Sending login message: %s, %s, %s, %s",
 		 $app, $version, $user, "x" x length($password));
-    $self->Write([$app, $version, $user, $password]);
+    $self->RPC::PlServer::Comm::Write([$app, $version, $user, $password]);
     $self->Debug("Waiting for server's response ...");
-    my $reply = $self->Read();
+    my $reply = $self->RPC::PlServer::Comm::Read();
     die "Expected server to return an array ref"
 	unless $reply && ref($reply) eq 'ARRAY';
     my $msg = defined($reply->[1]) ? $reply->[1] : '';
     die "Refused by server: $msg" unless $reply->[0];
     $self->Debug("Logged in, server replies: $msg");
 
+    $self->RPC::PlServer::Comm::Init();
     return ($self, $msg) if wantarray;
     $self;
 }
@@ -107,8 +108,8 @@ sub new ($@) {
 
 sub Call ($@) {
     my $self = shift;
-    $self->Write([@_]);
-    my $msg = $self->Read();
+    $self->RPC::PlServer::Comm::Write([@_]);
+    my $msg = $self->RPC::PlServer::Comm::Read();
     if (!$msg  ||  !ref($msg)) {
 	die "Expected server to return a reference";
     } elsif (ref($msg) eq 'SCALAR') {
@@ -287,6 +288,11 @@ name, a protocol version and optionally a user name and password.
 These arguments are handled by the servers I<Application>, I<Version>
 and I<User> methods.
 
+=item compression
+
+Set this to off (default, no compression) or gzip (requires the
+Compress::Zlib module).
+
 =item cipher
 
 This attribute can be used to add encryption quite easily. PlRPC is not
@@ -305,6 +311,12 @@ Example:
     $cipher = DES->new(pack("H*", "0123456789abcdef"));
     $client = RPC::PlClient->new('cipher' => $cipher,
 				...);
+
+=item maxmessage
+
+The size of messages exchanged between client and server is restricted,
+in order to omit denial of service attacks. By default the limit is
+65536 bytes.
 
 =item debug
 
@@ -388,7 +400,7 @@ RPC::PlServer man page. See L<RPC::PlServer(3)>.
     require RPC::PlClient;
 
     # Constants
-    my $MY_APPLICATION = "MD5 Server";
+    my $MY_APPLICATION = "MD5_Server";
     my $MY_VERSION = 1.0;
     my $MY_USER = "";		# The server doesn't require user
     my $MY_PASSWORD = "";	# authentication.
